<resources>
    <string name="app_name">MiLectura</string>
    <string name="title_library">Biblioteca</string>
    <string name="title_stats">Estadísticas</string>
    <string name="title_goals">Metas</string>
    <string name="title_profile">Perfil</string>
    <string name="channel_name">MiLectura</string>
    <string name="channel_description">Canal de notificaiones de MiLectura</string>
    <string name="pages">páginas</string>
    <string name="hint_search_book">Buscar libros</string>
    <string name="empty_library">El comienzo es la parte más importante del trabajo</string>
    <string name="dialog_pages">Páginas</string>
    <string name="dialog_limitDate">Fecha límite</string>
    <string name="dialog_notify">Notificaciones</string>
    <string name="dialog_monday">L</string>
    <string name="dialog_tuesday">M</string>
    <string name="dialog_wednesday">X</string>
    <string name="dialog_thursday">J</string>
    <string name="dialog_friday">V</string>
    <string name="dialog_saturday">S</string>
    <string name="dialog_sunday">D</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_ok">Confirmar</string>
    <string name="update">Actualizar</string>
    <string name="description">Descripción</string>
    <string name="author">Autor</string>
    <string name="isbn">ISBN</string>
    <string name="alert_title_delete">BORRAR LIBRO</string>
    <string name="dialog_finished">Finalizado</string>
    <string name="dialog_date">Fecha</string>
    <string name="daily">Día</string>
    <string name="weekly">Semana</string>
    <string name="yearly">Año</string>
    <string name="pages_read">Páginas leídas</string>
    <string name="pages_per_day">Páginas/Día</string>
    <string name="books_readed">Libros léidos</string>
    <string name="days_reading">Días seguidos leyendo</string>
    <string name="or">o</string>
    <string name="guessLogin">continuar como invitado</string>
    <string name="monthly">Mes</string>
    <string name="dayMon">Lun</string>
    <string name="dayTue">Mar</string>
    <string name="dayWed">Mié</string>
    <string name="dayThu">Jue</string>
    <string name="dayFri">Vie</string>
    <string name="daySat">Sáb</string>
    <string name="daySun">Dom</string>
    <string name="monthJan">Ene</string>
    <string name="monthMar">Mar</string>
    <string name="monthMay">May</string>
    <string name="monthJul">Jul</string>
    <string name="monthOct">Oct</string>
    <string name="monthDic">Dic</string>
    <string name="monthFeb">Feb</string>
    <string name="monthApr">Abr</string>
    <string name="monthJun">Jun</string>
    <string name="monthAug">Ago</string>
    <string name="monthSep">Sep</string>
    <string name="monthNov">Nov</string>
    <string name="months_reading">Meses seguidos leyendo</string>
    <string name="no_read_week">Aún no has leído esta semana</string>
    <string name="no_read_month">Aún no has leído este mes</string>
    <string name="no_read_year">Aún no has leído este año</string>
    <string name="books_reading">Libros en mi biblioteca</string>
    <string name="nothing_found">No se ha encontrado ningún libro</string>
    <string name="settings">Ajustes</string>
    <string name="title_category_notification">Notificaciones</string>
    <string name="title_notification">Sonido de notificación</string>
    <string name="summary_notification">Reproducir sonidos para las notificaciones</string>
    <string name="title_ringtone_notification">Tono de notificación</string>
    <string name="days_read">Días de lectura</string>
    <string name="months_readed">Meses de lectura</string>
    <string name="notifications">Notificaciones</string>
    <string name="goals">Metas</string>
    <string name="hour">Hora</string>
    <string name="no_goals">No tienes ninguna meta activa</string>
    <string name="read_notification_message">Hora de leer!</string>
    <string name="date_outbound_message">La fecha límite no puede ser anterior a la fecha actual</string>
    <string name="settings_updated_message">Ajustes actualizados</string>
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="alert_logout_title">Cerrar sesión</string>
    <string name="alert_logout_message">Si cierras sesión perderás toda tu biblioteca</string>
    <string name="internet_error">Comprueba tu conexión a internet</string>
    <string name="completed">COMPLETADOS</string>
    <string name="failed">FALLIDOS</string>
    <string name="active">ACTIVOS</string>
    <string name="web_client_id">18574337650-97r0um63unkm6b2iu6v90mqial17mejm.apps.googleusercontent.com</string>
    <string name="server_client_id">18574337650-97r0um63unkm6b2iu6v90mqial17mejm.apps.googleusercontent.com</string>
</resources>
