<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/llPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/dialog_pages"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/dialog_pages"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/dialog_limitDate"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <CheckBox
            android:id="@+id/dialog_cbdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:buttonTint="@color/colorPrimary" />

    </LinearLayout>

    <EditText
        android:id="@+id/dialog_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:visibility="gone" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_notify"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/dialog_monday"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/dialog_tuesday"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/dialog_wednesday"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/dialog_thursday"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/dialog_friday"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/dialog_saturday"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/dialog_sunday"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/dialog_cbmonday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:checked="false" />

        <CheckBox
            android:id="@+id/dialog_cbtuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:checked="false" />

        <CheckBox
            android:id="@+id/dialog_cbwednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:checked="false" />

        <CheckBox
            android:id="@+id/dialog_cbthursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:checked="false" />

        <CheckBox
            android:id="@+id/dialog_cbfriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:checked="false" />

        <CheckBox
            android:id="@+id/dialog_cbsaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:checked="false" />

        <CheckBox
            android:id="@+id/dialog_cbsunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:checked="false" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"/>

    </LinearLayout>

    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <Button
             android:id="@+id/dialog_btCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/dialog_cancel" />

         <Button
             android:id="@+id/dialog_btOk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/dialog_ok" />
     </LinearLayout>-->

</LinearLayout>