<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/tvPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_pages"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_actualPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:inputType="number"
        android:text="0"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPages"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="96dp" />

    <TextView
        android:id="@+id/pagesSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@id/dialog_actualPage"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_totalPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="000"
        android:enabled="false"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPages"
        app:layout_constraintStart_toEndOf="@id/pagesSeparator"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPages" />

    <EditText
        android:id="@+id/dialog_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:focusableInTouchMode="false"
        app:layout_constraintBaseline_toBaselineOf="@id/tvDate"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/tvPages" />


    <TextView
        android:id="@+id/tvFinished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingEnd="8dp"
        android:text="@string/dialog_finished"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />

    <CheckBox
        android:id="@+id/dialog_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimary"
        app:layout_constraintBaseline_toBaselineOf="@id/tvFinished"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        tools:layout_editor_absoluteX="117dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvPages,tvFinished,tvDate"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="16dp" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/dialog_thumbnail"
        android:layout_width="90dp"
        android:layout_height="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>