<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stats.StatsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="6dp" />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="3"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btWeekly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_stats_button_unselected"
            android:text="@string/weekly" />

        <Button
            android:id="@+id/btMonthly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_stats_button_unselected"
            android:text="@string/monthly" />

        <Button
            android:id="@+id/btYearly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_stats_button_unselected"
            android:text="@string/yearly" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlNoData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tableStats"
        app:layout_constraintTop_toBottomOf="@id/llButtons">

        <ImageView
            android:id="@+id/ivNoBook"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/nobook" />

        <TextView
            android:id="@+id/tvNoPagesReaded"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivNoBook"
            android:text="@string/no_read_week"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </RelativeLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@id/tableStats"
        app:layout_constraintTop_toBottomOf="@id/llButtons"
        app:layout_constraintVertical_chainStyle="spread" />

    <!--
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tableStats"
            app:layout_constraintTop_toBottomOf="@id/llButtons"
            app:layout_constraintVertical_chainStyle="spread" /> -->

    <!--
    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart"

        app:rowCount="2">

        <View
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnWeight="1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryLight" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            app:layout_column="0"
            app:layout_row="0">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="16dp"
                android:src="@drawable/ic_pages" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="test" />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_column="1">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="16dp"
                android:src="@drawable/ic_timer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_column="0">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="16dp"
                android:src="@drawable/ic_books" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_column="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="16dp"
                android:src="@drawable/ic_calendar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

            </LinearLayout>

        </LinearLayout>
    </androidx.gridlayout.widget.GridLayout>
-->
    <TableLayout
        android:id="@+id/tableStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:stretchColumns="2"
        android:shrinkColumns="0"
        app:layout_constraintBottom_toBottomOf="@id/guideline5">
        <!--
                <View
                    android:layout_margin="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryLight" />
        -->
        <TableRow
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/cellPadding">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="@dimen/iconStats"
                    android:src="@drawable/ic_pages" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/cellValuePadding">

                    <TextView
                        android:id="@+id/tvPagesReaded"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pages_read"
                        android:textSize="10dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/cellPadding">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="@dimen/iconStats"
                    android:src="@drawable/ic_timer" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/cellValuePadding">

                    <TextView
                        android:id="@+id/tvPagesAverage"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                    <TextView
                        android:id="@+id/tvLabelPagesAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pages_per_day"
                        android:textSize="10dp" />
                </LinearLayout>
            </LinearLayout>

        </TableRow>
<!--
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="6dp"
            android:background="@color/colorPrimaryDark" />
-->
        <TableRow
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/cellPadding">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="@dimen/iconStats"
                    android:src="@drawable/ic_calendar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/cellValuePadding">

                    <TextView
                        android:id="@+id/tvDaysReaded"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                    <TextView
                        android:id="@+id/tvLabelDaysReaded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/days_read"
                        android:textSize="10dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/cellPadding">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="@dimen/iconStats"
                    android:src="@drawable/ic_calendar_check" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/cellValuePadding">

                    <TextView
                        android:id="@+id/tvReadConsecutive"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                    <TextView
                        android:id="@+id/tvLabelReadConsecutive"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/days_reading"
                        android:textSize="10dp" />

                </LinearLayout>

            </LinearLayout>

        </TableRow>

    </TableLayout>

    <!--<com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
-->
</androidx.constraintlayout.widget.ConstraintLayout>